[gd_scene load_steps=9 format=1]

[ext_resource path="res://src/nd_notification.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/particular/blue_button13.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/cocogoose_trial.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/particular/g4601.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 35
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="Animation" id=4]

resource/name = "view_modal"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="nd_notification" type="Node2D"]

visibility/visible = false
visibility/opacity = 0.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="txb_msj_1" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 136.0
margin/right = 652.0
margin/bottom = 283.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_head" type="Label" parent="txb_msj_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 20.0
margin/right = 525.0
margin/bottom = 64.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "actualiza tu informacion"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_subject" type="Label" parent="txb_msj_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 21.0
margin/top = 75.0
margin/right = 553.0
margin/bottom = 119.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "gana 1000 puntos por completarlo"
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="txb_msj_1"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 213.0
margin/top = -19.0
margin/right = 399.0
margin/bottom = 46.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="txb_back" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 1130.0
margin/right = 214.0
margin/bottom = 1179.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_back" type="Label" parent="txb_back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 126.0
margin/bottom = 51.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "volver"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="anp_notification" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/view_modal = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


